// VoxProtocol HTTP v1 â€” Protocol Buffer definitions
// Adapted from vox.proto for the hybrid REST + WebSocket + Media protocol.
// The MessageType enum is removed (no binary frame types). All data enums
// and sub-message types are preserved. HTTP-specific request/response
// wrappers are added.

syntax = "proto3";
package vox.http.v1;

option go_package = "vox/http/v1;voxhttppb";

// ============================================================================
// Enums (all data enums preserved from vox.proto)
// ============================================================================

// Error codes (Section 13).
enum ErrorCode {
  ERROR_OK                       = 0;
  ERROR_UNKNOWN                  = 1;
  ERROR_PROTOCOL_VERSION_MISMATCH = 2;
  ERROR_AUTH_FAILED              = 3;
  ERROR_AUTH_EXPIRED             = 4;
  ERROR_RATE_LIMITED             = 5;
  ERROR_FORBIDDEN                = 6;
  ERROR_USER_NOT_FOUND           = 7;
  ERROR_SPACE_NOT_FOUND          = 8;
  ERROR_MESSAGE_NOT_FOUND        = 9;
  ERROR_MESSAGE_TOO_LARGE        = 10;
  ERROR_FILE_TOO_LARGE           = 11;
  ERROR_UNSUPPORTED_CODEC        = 12;
  ERROR_ROOM_FULL                = 13;
  ERROR_ALREADY_IN_VOICE         = 14;
  ERROR_INVITE_EXPIRED           = 15;
  ERROR_INVITE_INVALID           = 16;
  ERROR_BANNED                   = 17;
  ERROR_ROLE_HIERARCHY           = 18;
  ERROR_SPACE_TYPE_MISMATCH      = 19;
  ERROR_SERVER_FULL              = 20;
  ERROR_E2E_KEY_MISMATCH         = 21;
  ERROR_PREKEY_EXHAUSTED         = 22;
  ERROR_DEVICE_LIMIT_REACHED     = 23;
  ERROR_DM_PERMISSION_DENIED     = 24;
  ERROR_USER_BLOCKED             = 25;
  ERROR_REPORT_NOT_FOUND         = 26;
  ERROR_DEVICE_PAIR_DENIED       = 27;
  ERROR_DEVICE_PAIR_EXPIRED      = 28;
  ERROR_KEY_BACKUP_NOT_FOUND     = 29;
  ERROR_FEDERATION_UNAVAILABLE   = 30;
  ERROR_FEDERATION_DENIED        = 31;
  ERROR_CMD_ALREADY_REGISTERED   = 32;
  ERROR_CMD_NOT_FOUND            = 33;
  ERROR_INTERACTION_EXPIRED      = 34;
  ERROR_WEBHOOK_NOT_FOUND        = 35;
  ERROR_WEBHOOK_TOKEN_INVALID    = 36;
  ERROR_2FA_REQUIRED                  = 37;
  ERROR_2FA_INVALID_CODE              = 38;
  ERROR_2FA_ALREADY_ENABLED           = 39;
  ERROR_2FA_NOT_ENABLED               = 40;
  ERROR_2FA_SETUP_EXPIRED             = 41;
  ERROR_2FA_RECOVERY_EXHAUSTED        = 42;
  ERROR_CPACE_FAILED                  = 43;
  ERROR_CPACE_EXPIRED                 = 44;
  ERROR_WEBAUTHN_INVALID              = 45;
  ERROR_WEBAUTHN_CREDENTIAL_NOT_FOUND = 46;
}

// Federation error codes (Section 16).
enum FederationErrorCode {
  FED_ERROR_OK               = 0;
  FED_ERROR_UNKNOWN          = 1;
  FED_ERROR_AUTH_FAILED      = 2;
  FED_ERROR_DNS_KEY_MISMATCH = 3;
  FED_ERROR_POLICY_DENIED    = 4;
  FED_ERROR_NOT_ON_ALLOWLIST = 5;
  FED_ERROR_BLOCKED          = 6;
  FED_ERROR_RATE_LIMITED     = 7;
  FED_ERROR_USER_NOT_FOUND   = 8;
  FED_ERROR_INVITE_INVALID   = 9;
  FED_ERROR_INVITE_EXPIRED   = 10;
  FED_ERROR_SERVER_FULL      = 11;
}

// Feed types.
enum FeedType {
  FEED_TYPE_TEXT         = 0;
  FEED_TYPE_FORUM        = 1;
  FEED_TYPE_ANNOUNCEMENT = 2;
}

// Room types.
enum RoomType {
  ROOM_TYPE_VOICE = 0;
  ROOM_TYPE_STAGE = 1;
}

// Presence status.
enum PresenceStatus {
  PRESENCE_ONLINE    = 0;
  PRESENCE_IDLE      = 1;
  PRESENCE_DND       = 2;
  PRESENCE_INVISIBLE = 3;
  PRESENCE_OFFLINE   = 4;
}

// DM permission settings (Section 15).
enum DmPermission {
  DM_PERMISSION_EVERYONE       = 0;
  DM_PERMISSION_FRIENDS_ONLY   = 1;
  DM_PERMISSION_MUTUAL_SERVERS = 2;
  DM_PERMISSION_NOBODY         = 3;
}

// Interaction types.
enum InteractionType {
  INTERACTION_SLASH_COMMAND = 0;
  INTERACTION_BUTTON       = 1;
  INTERACTION_MENU         = 2;
}

// Component types for bot messages.
enum ComponentType {
  COMPONENT_BUTTON = 0;
  COMPONENT_MENU   = 1;
}

// Report reason categories (Section 15).
enum ReportReason {
  REPORT_REASON_HARASSMENT      = 0;
  REPORT_REASON_SPAM            = 1;
  REPORT_REASON_ILLEGAL_CONTENT = 2;
  REPORT_REASON_THREATS         = 3;
  REPORT_REASON_OTHER           = 4;
}

// Report resolve actions.
enum ReportAction {
  REPORT_ACTION_DISMISS = 0;
  REPORT_ACTION_WARN    = 1;
  REPORT_ACTION_KICK    = 2;
  REPORT_ACTION_BAN     = 3;
}

// Media codec IDs (Section 8).
enum CodecId {
  CODEC_NONE         = 0;
  CODEC_OPUS         = 1;
  CODEC_AV1          = 2;
  CODEC_AV1_SCREEN   = 3;
}

// Media frame flags (Section 8). Bitmask values.
enum MediaFlag {
  MEDIA_FLAG_NONE         = 0;
  MEDIA_FLAG_KEYFRAME     = 1;
  MEDIA_FLAG_END_OF_FRAME = 2;
  MEDIA_FLAG_FEC          = 4;
  MEDIA_FLAG_MARKER       = 8;
  MEDIA_FLAG_HAS_DEP_DESC = 16;
}

// Activity types.
enum ActivityType {
  ACTIVITY_PLAYING   = 0;
  ACTIVITY_STREAMING = 1;
  ACTIVITY_LISTENING = 2;
}

// Reaction action.
enum ReactionAction {
  REACTION_ADD    = 0;
  REACTION_REMOVE = 1;
}

// Pin action.
enum PinAction {
  PIN_PIN   = 0;
  PIN_UNPIN = 1;
}

// Sync categories.
enum SyncCategory {
  SYNC_MEMBERS    = 0;
  SYNC_ROLES      = 1;
  SYNC_FEEDS      = 2;
  SYNC_ROOMS      = 3;
  SYNC_CATEGORIES = 4;
}

// Device pairing method.
enum PairMethod {
  PAIR_CPACE = 0;
  PAIR_QR    = 1;
}

// Two-factor authentication methods.
enum TwoFactorMethod {
  TWO_FACTOR_TOTP     = 0;
  TWO_FACTOR_WEBAUTHN = 1;
}

// Permission override target type.
enum OverrideTargetType {
  OVERRIDE_ROLE = 0;
  OVERRIDE_USER = 1;
}

// ============================================================================
// Common sub-message types (preserved from vox.proto)
// ============================================================================

message Mention {
  uint32 user_id = 1;
}

message Embed {
  optional string title       = 1;
  optional string description = 2;
  optional string url         = 3;
  optional string image       = 4;
  optional string video       = 5;
  optional uint32 color       = 6;
}

message Attachment {
  string file_id = 1;
  string name    = 2;
  uint64 size    = 3;
  string mime    = 4;
  optional string url = 5;
}

message Component {
  ComponentType type = 1;
  string id          = 2;
  string label       = 3;
}

message PermissionOverride {
  uint32             target_id   = 1;
  OverrideTargetType target_type = 2;
  uint64             allow       = 3;
  uint64             deny        = 4;
}

message Role {
  uint32 role_id     = 1;
  string name        = 2;
  uint32 color       = 3;
  uint64 permissions = 4;
  uint32 position    = 5;
}

message Member {
  uint32   user_id      = 1;
  string   display_name = 2;
  optional string avatar    = 3;
  optional string nickname  = 4;
  repeated uint32 role_ids  = 5;
}

message BanEntry {
  uint32          user_id      = 1;
  string          display_name = 2;
  optional string reason       = 3;
}

message Invite {
  string          code       = 1;
  uint32          creator_id = 2;
  optional uint32 feed_id    = 3;
  optional uint32 max_uses   = 4;
  uint32          uses       = 5;
  optional uint64 expires_at = 6;
}

message FeedInfo {
  uint32             feed_id     = 1;
  string             name        = 2;
  FeedType           type        = 3;
  optional uint32    category_id = 4;
  optional string    topic       = 5;
  repeated PermissionOverride permission_overrides = 6;
}

message RoomInfo {
  uint32             room_id     = 1;
  string             name        = 2;
  RoomType           type        = 3;
  optional uint32    category_id = 4;
  repeated PermissionOverride permission_overrides = 5;
}

message CategoryInfo {
  uint32 category_id = 1;
  string name        = 2;
  uint32 position    = 3;
}

message ThreadInfo {
  uint32          thread_id      = 1;
  uint32          parent_feed_id = 2;
  uint64          parent_msg_id  = 3;
  string          name           = 4;
  bool            archived       = 5;
  bool            locked         = 6;
}

message ChatMessage {
  uint64          msg_id     = 1;
  uint32          feed_id    = 2;
  uint32          author_id  = 3;
  string          body       = 4;
  uint64          timestamp  = 5;
  optional uint64 reply_to   = 6;
  repeated Mention    mentions    = 7;
  repeated Embed      embeds      = 8;
  repeated Attachment attachments = 9;
  repeated Component  components  = 10;
  optional uint64 edit_timestamp  = 11;
  bool            federated       = 12;
  optional string author_address  = 13;
}

message FriendEntry {
  uint32 user_id      = 1;
  string display_name = 2;
  optional string avatar = 3;
}

message DmInfo {
  uint32          dm_id        = 1;
  repeated uint32 participant_ids = 2;
  optional string name         = 3;
  optional string icon         = 4;
  bool            is_group     = 5;
}

message EmojiInfo {
  uint32 emoji_id   = 1;
  string name       = 2;
  uint32 creator_id = 3;
}

message StickerInfo {
  uint32 sticker_id = 1;
  string name       = 2;
  uint32 creator_id = 3;
}

message WebhookInfo {
  uint32          webhook_id = 1;
  uint32          feed_id    = 2;
  string          name       = 3;
  optional string avatar     = 4;
  string          token      = 5;
}

message CommandDef {
  string name        = 1;
  string description = 2;
  repeated CommandParam params = 3;
}

message CommandParam {
  string name        = 1;
  string description = 2;
  bool   required    = 3;
}

message DeviceInfo {
  string device_id   = 1;
  string device_name = 2;
}

message SyncEvent {
  string type     = 1;
  bytes  payload  = 2;
  uint64 timestamp = 3;
}

message VoiceStateEntry {
  uint32 user_id   = 1;
  bool   mute      = 2;
  bool   deaf      = 3;
  bool   video     = 4;
  bool   streaming = 5;
}

message ReportEntry {
  uint32          report_id        = 1;
  uint32          reporter_id      = 2;
  uint32          reported_user_id = 3;
  uint32          dm_id            = 4;
  repeated ChatMessage messages    = 5;
  ReportReason    reason           = 6;
  optional string description      = 7;
  optional string status           = 8;
  uint64          created_at       = 9;
}

message DependencyTemplate {
  uint32 spatial_id           = 1;
  uint32 temporal_id          = 2;
  repeated uint32 decode_target_indications = 3;
  repeated uint32 frame_diffs = 4;
  repeated uint32 chain_diffs = 5;
}

message SearchFilters {
  optional uint64 before   = 1;
  optional uint64 after    = 2;
  optional bool   has_file = 3;
  optional bool   has_embed = 4;
  optional bool   pinned   = 5;
}

message ServerInfo {
  string name        = 1;
  optional string icon = 2;
  optional string description = 3;
  uint32 member_count = 4;
}

message ActivityUpdate {
  ActivityType    type   = 1;
  string          name   = 2;
  optional string detail = 3;
}

message AuditLogEntry {
  uint64              entry_id   = 1;
  string              event_type = 2;
  uint32              actor_id   = 3;
  optional uint32     target_id  = 4;
  map<string, string> metadata   = 5;
  uint64              timestamp  = 6;
}

message WebAuthnCredentialInfo {
  bytes           credential_id   = 1;
  string          name            = 2;
  uint64          registered_at   = 3;
  optional uint64 last_used_at    = 4;
}

// ============================================================================
// REST API Request/Response Wrappers
// ============================================================================

// --- Authentication ---

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string          token        = 1;
  uint32          user_id      = 2;
  string          display_name = 3;
  repeated uint32 roles        = 4;
  // If 2FA is required, token is empty and mfa fields are set.
  bool                       mfa_required      = 5;
  optional string            mfa_ticket        = 6;
  repeated TwoFactorMethod   available_methods = 7;
}

message Login2faRequest {
  string          mfa_ticket = 1;
  TwoFactorMethod method     = 2;
  optional string code       = 3;  // TOTP code or recovery code
  optional bytes  assertion  = 4;  // WebAuthn assertion
}

message RegisterRequest {
  string          username     = 1;
  string          password     = 2;
  optional string display_name = 3;
}

message RegisterResponse {
  uint32 user_id = 1;
  string token   = 2;
}

message TwoFactorStatusResponse {
  bool   totp_enabled        = 1;
  bool   webauthn_enabled    = 2;
  uint32 recovery_codes_left = 3;
}

message TwoFactorSetupRequest {
  TwoFactorMethod method = 1;
}

message TwoFactorSetupResponse {
  string          setup_id                  = 1;
  TwoFactorMethod method                    = 2;
  optional string totp_secret               = 3;
  optional string totp_uri                  = 4;
  optional bytes  webauthn_creation_options = 5;
}

message TwoFactorConfirmRequest {
  string          setup_id             = 1;
  optional string code                 = 2;  // TOTP code
  optional bytes  webauthn_attestation = 3;
  optional string credential_name      = 4;
}

message TwoFactorConfirmResponse {
  bool            success        = 1;
  repeated string recovery_codes = 2;
}

// --- Voice ---

message VoiceJoinRequest {
  bool self_mute = 1;
  bool self_deaf = 2;
}

message VoiceJoinResponse {
  string                   media_url   = 1;
  string                   media_token = 2;
  repeated VoiceStateEntry members     = 3;
}

// --- Gateway ---

message GatewayInfoResponse {
  string url       = 1;
  string media_url = 2;
}

// --- Sync ---

message SyncRequest {
  uint64                since_timestamp = 1;
  repeated SyncCategory categories      = 2;
}

message SyncResponse {
  repeated SyncEvent events           = 1;
  uint64             server_timestamp = 2;
}

// --- Generic Wrappers ---

// Standard error response (JSON: {"error": {...}}).
message ErrorResponse {
  ErrorCode       code               = 1;
  string          message            = 2;
  optional uint32 retry_after_ms     = 3;
  optional string missing_permission = 4;
}

// Cursor-based paginated list.
message PaginatedList {
  repeated bytes  items  = 1;  // Each item is a proto-encoded message
  optional string cursor = 2;
}

// Server layout (GET /server/layout).
message ServerLayoutResponse {
  repeated CategoryInfo categories = 1;
  repeated FeedInfo     feeds      = 2;
  repeated RoomInfo     rooms      = 3;
}

// ============================================================================
// WebSocket Gateway Messages
// ============================================================================

// Gateway message envelope (Section 7).
// All WebSocket messages follow this structure.
message GatewayMessage {
  uint32          op = 1;  // Opcode
  optional string t  = 2;  // Event name (op 0 only)
  optional uint32 s  = 3;  // Sequence number (op 0 only)
  bytes           d  = 4;  // Event data (JSON-encoded in practice)
}

// IDENTIFY payload (op 2).
message GatewayIdentify {
  string          token        = 1;
  repeated string capabilities = 2;
}

// RESUME payload (op 3).
message GatewayResume {
  string token          = 1;
  string session_id     = 2;
  uint32 last_sequence  = 3;
}

// HELLO payload (op 4).
message GatewayHello {
  uint32 heartbeat_interval = 1;
}

// READY event data (dispatch).
message GatewayReady {
  string          session_id   = 1;
  uint32          user_id      = 2;
  string          display_name = 3;
  string          server_name  = 4;
  optional string server_icon  = 5;
  uint64          server_time  = 6;
  repeated string capabilities = 7;
}

// ============================================================================
// Federation Messages (server-to-server, unchanged from vox.proto)
// ============================================================================

message FedHello {
  string          origin_domain = 1;
  bytes           signature     = 2;
  repeated string capabilities  = 3;
}

message FedHelloAck {
  bool            verified     = 1;
  repeated string capabilities = 2;
}

message FedPrekeyReq {
  string user_address = 1;
}

message FedPrekeyRes {
  string         user_address   = 1;
  bytes          identity_key   = 2;
  bytes          signed_prekey  = 3;
  optional bytes one_time_prekey = 4;
}

message FedMsgRelay {
  string from_user  = 1;
  string to_user    = 2;
  bytes  opaque_blob = 3;
  bytes  signature  = 4;
}

message FedPresenceSub {
  string user_address = 1;
}

message FedPresenceNotify {
  string                  user_address = 1;
  PresenceStatus          status       = 2;
  optional ActivityUpdate activity     = 3;
}

message FedUserLookup {
  string user_address = 1;
}

message FedUserLookupRes {
  string          display_name = 1;
  optional string avatar_url   = 2;
  optional string bio          = 3;
}

message FedJoinReq {
  string          user_address = 1;
  optional string invite_code  = 2;
  bytes           voucher      = 3;
}

message FedJoinRes {
  bool            accepted         = 1;
  optional string federation_token = 2;
  optional ServerInfo server_info  = 3;
}

message FedTyping {
  string from_user = 1;
  string to_user   = 2;
}

message FedDmRead {
  string from_user    = 1;
  string to_user      = 2;
  uint64 up_to_msg_id = 3;
}

message FedBlockNotify {
  optional string reason = 1;
}

message FedError {
  FederationErrorCode code   = 1;
  optional string     reason = 2;
  optional uint32     retry_after_ms = 3;
}
